force-app/main/default/objects/Balance__c/Balance__c.object-meta.xml
<CustomObject>
    <label>시산</label>
    <nameField>
        <label>Balance Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>