force-app/main/default/objects/Balance__c/fields/CommonLaborCostAmt__c.field-meta.xml
<CustomField>
    <fullName>CommonLaborCostAmt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>인건비</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>