force-app/main/default/objects/Balance__c/fields/ConsumableCostAmt__c.field-meta.xml
<CustomField>
    <fullName>ConsumableCostAmt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>소모품비</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>