force-app/main/default/objects/Balance__c/fields/DepreciationCostAmt__c.field-meta.xml
<CustomField>
    <fullName>DepreciationCostAmt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>상각비</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>