force-app/main/default/objects/Balance__c/fields/EtcCostAmt__c.field-meta.xml
<CustomField>
    <fullName>EtcCostAmt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>기타경비</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>