force-app/main/default/objects/Balance__c/fields/EtcExpenseAmt__c.field-meta.xml
<CustomField>
    <fullName>EtcExpenseAmt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>기타영외비용</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>