force-app/main/default/objects/Balance__c/fields/EtcProfitAmt__c.field-meta.xml
<CustomField>
    <fullName>EtcProfitAmt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>기타영외수익</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>