force-app/main/default/objects/Balance__c/fields/FinancialBalanceAmt__c.field-meta.xml
<CustomField>
    <fullName>FinancialBalanceAmt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>금융수지</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>