force-app/main/default/objects/Balance__c/fields/FinancialExpenseAmt__c.field-meta.xml
<CustomField>
    <fullName>FinancialExpenseAmt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>금융비용</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>