force-app/main/default/objects/Balance__c/fields/FinancialProfitAmt__c.field-meta.xml
<CustomField>
    <fullName>FinancialProfitAmt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>금융수익</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>