force-app/main/default/objects/Balance__c/fields/IRR__c.field-meta.xml
<CustomField>
    <fullName>IRR__c</fullName>
    <label>IRR</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>