force-app/main/default/objects/Balance__c/fields/IRR_RAW__c.field-meta.xml
<CustomField>
    <fullName>IRR_RAW__c</fullName>
    <label>IRR_RAW</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>