force-app/main/default/objects/Balance__c/fields/IRRPct__c.field-meta.xml
<CustomField>
    <fullName>IRRPct__c</fullName>
    <defaultValue>0</defaultValue>
    <label>IRR (%)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>