force-app/main/default/objects/Balance__c/fields/LogisticCostAmt__c.field-meta.xml
<CustomField>
    <fullName>LogisticCostAmt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>물류비</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>