force-app/main/default/objects/Balance__c/fields/ManufacturingCost__c.field-meta.xml
<CustomField>
    <fullName>ManufacturingCost__c</fullName>
    <label>제조경비</label>
    <length>255</length>
    <type>Text</type>
</CustomField>