force-app/main/default/objects/Balance__c/fields/ManufacturingCostAmt__c.field-meta.xml
<CustomField>
    <fullName>ManufacturingCostAmt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>제조경비 (금액)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>