force-app/main/default/objects/Balance__c/fields/ManufacturingCostPct__c.field-meta.xml
<CustomField>
    <fullName>ManufacturingCostPct__c</fullName>
    <defaultValue>0</defaultValue>
    <label>제조경비 (%)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>