force-app/main/default/objects/Balance__c/fields/MgmtProfit__c.field-meta.xml
<CustomField>
    <fullName>MgmtProfit__c</fullName>
    <label>관리이익</label>
    <length>255</length>
    <type>Text</type>
</CustomField>