force-app/main/default/objects/Balance__c/fields/MgmtProfitAmt__c.field-meta.xml
<CustomField>
    <fullName>MgmtProfitAmt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>관리이익 (금액)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>