force-app/main/default/objects/Balance__c/fields/MgmtProfitPct__c.field-meta.xml
<CustomField>
    <fullName>MgmtProfitPct__c</fullName>
    <defaultValue>0</defaultValue>
    <label>관리이익 (%)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>