force-app/main/default/objects/Balance__c/fields/PL__c.field-meta.xml
<CustomField>
    <fullName>PL__c</fullName>
    <label>PL(본부기준)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>