force-app/main/default/objects/Balance__c/fields/PL_RAW__c.field-meta.xml
<CustomField>
    <fullName>PL_RAW__c</fullName>
    <label>PL_RAW</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>