force-app/main/default/objects/Balance__c/fields/PurchasingCost__c.field-meta.xml
<CustomField>
    <fullName>PurchasingCost__c</fullName>
    <label>매입원가</label>
    <length>255</length>
    <type>Text</type>
</CustomField>