force-app/main/default/objects/Balance__c/fields/PurchasingCostAmt__c.field-meta.xml
<CustomField>
    <fullName>PurchasingCostAmt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>매입원가 (금액)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>