force-app/main/default/objects/Balance__c/fields/PurchasingCostPct__c.field-meta.xml
<CustomField>
    <fullName>PurchasingCostPct__c</fullName>
    <defaultValue>0</defaultValue>
    <label>매입원가 (%)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>