force-app/main/default/objects/Balance__c/fields/RentalCostAmt__c.field-meta.xml
<CustomField>
    <fullName>RentalCostAmt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>임차료</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>