force-app/main/default/objects/Balance__c/fields/SalesProfit__c.field-meta.xml
<CustomField>
    <fullName>SalesProfit__c</fullName>
    <label>매출이익</label>
    <length>255</length>
    <type>Text</type>
</CustomField>