force-app/main/default/objects/Balance__c/fields/SalesProfitAmt__c.field-meta.xml
<CustomField>
    <fullName>SalesProfitAmt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>매출이익 (금액)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>