force-app/main/default/objects/Balance__c/fields/SalesProfitPct__c.field-meta.xml
<CustomField>
    <fullName>SalesProfitPct__c</fullName>
    <defaultValue>0</defaultValue>
    <label>매출이익 (%)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>