force-app/main/default/objects/Balance__c/fields/SalesRevenue__c.field-meta.xml
<CustomField>
    <fullName>SalesRevenue__c</fullName>
    <label>매출액</label>
    <length>255</length>
    <type>Text</type>
</CustomField>