force-app/main/default/objects/Balance__c/fields/SalesRevenueAmt__c.field-meta.xml
<CustomField>
    <fullName>SalesRevenueAmt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>매출액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>