force-app/main/default/objects/Balance__c/fields/ServiceLaborCostAmt__c.field-meta.xml
<CustomField>
    <fullName>ServiceLaborCostAmt__c</fullName>
    <label>서비스전문직비</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>