force-app/main/default/objects/Balance__c/fields/SummaryTable__c.field-meta.xml
<CustomField>
    <fullName>SummaryTable__c</fullName>
    <label>시산요약표</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>