force-app/main/default/objects/Balance__c/fields/SummaryTable_RAW__c.field-meta.xml
<CustomField>
    <fullName>SummaryTable_RAW__c</fullName>
    <label>SummaryTable_RAW</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>