force-app/main/default/objects/Balance__c/fields/UtilityCostAmt__c.field-meta.xml
<CustomField>
    <fullName>UtilityCostAmt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>유틸리티</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>